--- a/app/src/main/res/layout/activity_selelct.xml
+++ b/app/src/main/res/layout/activity_selelct.xml
@@ -47,7 +47,7 @@
 
     <Button
         android:id="@+id/select_layout_myInfo_button"
-        android:layout_width="88dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:background="#B34141"
