--- a/app/src/main/res/values/string_layout_activity_userinfo.xml
+++ b/app/src/main/res/values/string_layout_activity_userinfo.xml
@@ -3,6 +3,7 @@
         <string name="userNickName">닉네임</string>
         <string name="basicInfo">기본정보</string>
         <string name="essentialName">이름(필수)</string>
-        <string name="essentialAge">나이(선택)</string>
+        <string name="essentialAge">나이(필수)</string>
         <string name="basicInfoOk">완료</string>
+        <string name="userPhoneNumber">전화번호(필수)</string>
 </resources>
