--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteY="25dp">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/checklist_layout_layout_my_toolbar"
@@ -12,8 +13,8 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintBottom_toTopOf="@+id/add_beneficiary_layout_textView_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
@@ -30,7 +31,8 @@
         android:id="@+id/add_beneficiary_layout_textView_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="103dp"
+        android:layout_marginBottom="127dp"
+        android:layout_marginTop="57dp"
         android:background="@color/titleTextColor1"
         android:gravity="center"
         android:text="@string/checkList_title_Text"
@@ -39,47 +41,51 @@
         app:layout_constraintBottom_toTopOf="@+id/checkList_layout_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checklist_layout_layout_my_toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/checkList_layout_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="125dp"
         android:hint="checklist 내용을 입력 하는 곳"
-        app:layout_constraintBottom_toTopOf="@+id/checkList_layout_yesCheckBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_beneficiary_layout_textView_title" />
+        app:layout_constraintTop_toBottomOf="@+id/guideline7" />
 
     <CheckBox
         android:id="@+id/checkList_layout_yesCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="90dp"
         android:text="@string/checkList_layout_yesChcekBox_text"
         app:layout_constraintBottom_toTopOf="@+id/checkList_layout_beforeButton"
         app:layout_constraintEnd_toStartOf="@+id/checkList_layout_noCheckBox"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkList_layout_textView" />
+        app:layout_constraintTop_toBottomOf="@+id/checkList_layout_textView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <CheckBox
         android:id="@+id/checkList_layout_noCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/checkList_layout_noChcekBox_text"
         app:layout_constraintBottom_toBottomOf="@+id/checkList_layout_yesCheckBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/checkList_layout_yesCheckBox"
-        app:layout_constraintTop_toTopOf="@+id/checkList_layout_yesCheckBox" />
+        app:layout_constraintTop_toTopOf="@+id/checkList_layout_yesCheckBox"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/checkList_layout_beforeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkList_layout_beforeButton"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/checklist_layout_checkListOk_Button"
         app:layout_constraintEnd_toStartOf="@+id/checkList_layout_nextButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,11 +95,31 @@
         android:id="@+id/checkList_layout_nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/checkList_layout_nextButton"
         app:layout_constraintBottom_toBottomOf="@+id/checkList_layout_beforeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/checkList_layout_beforeButton"
         app:layout_constraintTop_toTopOf="@+id/checkList_layout_beforeButton" />
+
+    <Button
+        android:id="@+id/checklist_layout_checkListOk_Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="41dp"
+        android:background="#B34141"
+        android:text="기증 적합 여부 확인하기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkList_layout_nextButton" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="79dp" />
 
 </android.support.constraint.ConstraintLayout>
