--- a/app/src/main/res/layout/activity_feeding_room.xml
+++ b/app/src/main/res/layout/activity_feeding_room.xml
@@ -13,9 +13,8 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -31,16 +30,19 @@
     <TextView
         android:id="@+id/feedingRoom_textView_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="55dp"
         android:background="@color/titleTextColor1"
         android:gravity="center"
         android:text="@string/feedigRoom_title_text"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/feedingRoom_layout_textView_feedingRoomName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_donor_layout_layout_my_toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -49,6 +51,9 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:hint="@string/feedigRoom_name_text"
+        android:textSize="20dp"
+        android:textColor="@color/titleColor"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/feedingRoom_layout_Button_roadSearch_Button"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,14 +61,14 @@
 
     <Button
         android:id="@+id/feedingRoom_layout_Button_roadSearch_Button"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="62dp"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="17dp"
         android:background="@drawable/feeding_room_button"
         android:text="@string/Road_Search_Button_text"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/login_layout_view2"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/feedingRoom_layout_Button_donorAdd_Button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,12 +77,12 @@
 
     <Button
         android:id="@+id/feedingRoom_layout_Button_donorAdd_Button"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
-        android:textColor="#FFFFFF"
         android:background="@drawable/feeding_room_button"
         android:text="@string/add_Donor_Beneficiary_Button_text"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/feedingRoom_layout_Button_roadSearch_Button"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.5"
@@ -93,21 +98,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:background="#999999"
-        app:layout_constraintBottom_toTopOf="@+id/donor_beneficiary_list"
+        app:layout_constraintBottom_toTopOf="@+id/donor_layout_donor_listView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/feedingRoom_layout_Button_roadSearch_Button" />
-
-
-    <ListView
-        android:id="@+id/donor_beneficiary_list"
-        android:layout_width="368dp"
-        android:layout_height="283dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_layout_view2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
 
     <android.support.constraint.Guideline
@@ -116,6 +110,34 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="192dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="206dp" />
+
+    <ListView
+        android:id="@+id/donor_layout_donor_listView"
+        android:layout_width="match_parent"
+        android:layout_height="340dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_view2" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/feedingRoom_textView_title"
+        app:srcCompat="@drawable/feeding_room_img" />
 
 
 </android.support.constraint.ConstraintLayout>
