--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="1dp"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,15 +32,14 @@
         android:layout_width="384dp"
         android:layout_height="1dp"
         android:background="#221814"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="207dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/login_layout_editText_email"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/email_input_text"
@@ -50,14 +47,12 @@
         app:layout_constraintBottom_toTopOf="@+id/login_layout_editText_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/login_layout_editText_password"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/password_input_text"
@@ -71,10 +66,6 @@
         android:id="@+id/login_layout_loginOk_button"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="55dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="9dp"
         android:background="@drawable/mtm_button"
         android:text="@string/button_LoginOkButton_Text"
         android:textColor="#FFFFFF"
@@ -95,45 +86,40 @@
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="23dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="45dp"
         android:background="@color/titleTextColor1"
         android:gravity="center"
         android:text="@string/login_layout_login_info"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintBottom_toTopOf="@+id/login_layout_googleLogin_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_layout_layout_my_toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="12dp"
         android:text="@string/login_mtoLogin_Text"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintBottom_toTopOf="@+id/login_layout_editText_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline5" />
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <TextView
         android:id="@+id/login_layout_join_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="@string/button_JoinButton_Text"
+        app:layout_constraintBottom_toBottomOf="@+id/divider2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/divider2"
@@ -143,7 +129,9 @@
         android:id="@+id/divider1"
         android:layout_width="1dp"
         android:layout_height="15dp"
+        android:layout_marginBottom="8dp"
         android:background="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -153,7 +141,9 @@
         android:id="@+id/divider2"
         android:layout_width="1dp"
         android:layout_height="15dp"
+        android:layout_marginBottom="8dp"
         android:background="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toStartOf="@+id/login_layout_join_button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -163,21 +153,19 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/id_search_text"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toStartOf="@+id/divider1"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+        app:layout_constraintTop_toBottomOf="@+id/guideline4" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="@string/password_search_text"
+        app:layout_constraintBottom_toBottomOf="@+id/divider1"
         app:layout_constraintEnd_toStartOf="@+id/divider2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/divider1"
@@ -186,8 +174,8 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="372dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="4dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="#375D96"
         android:text="@string/textView_FaceBookLogin_Text"
@@ -205,25 +193,11 @@
         app:layout_constraintGuide_begin="90dp" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="259dp" />
-
-    <android.support.constraint.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="379dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="351dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline6"
