구글지도수유실다중마커진행중

--- a/app/src/main/res/values/string_layout_checklist.xml
+++ b/app/src/main/res/values/string_layout_checklist.xml
@@ -15,4 +15,5 @@
     <string name="checkList_layout_beforeButton">이전</string>
     <string name="checkList_layout_yesChcekBox_text">네</string>
     <string name="checkList_layout_noChcekBox_text">아니오</string>
+    <string name="checkList_layout_listOkButton_text">기증 적합 여부 확인하기</string>
 </resources>
