--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/myPage_layout_layout_my_toolbar"
-        android:layout_width="385dp"
+        android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
@@ -28,7 +28,7 @@
 
 
     <TextView
-        android:id="@+id/mypage_textView_title"
+        android:id="@+id/myPage_textView_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/titleTextColor1"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/guideline9" />
 
     <TextView
-        android:id="@+id/mypage_layoue_request_textView"
+        android:id="@+id/myPage_layout_request_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/myPage_requestList_text"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/mypage_layoue_request_textView"
+        app:layout_constraintBottom_toTopOf="@+id/myPage_layout_request_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline9" />
