현웅,보내준코드 추가

--- a/app/src/main/res/drawable-v21/mtm_button.xml
+++ b/app/src/main/res/drawable-v21/mtm_button.xml
@@ -11,7 +11,7 @@
 
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="100dip" />
+            <corners android:radius="10dp" />
             <solid android:color="#EB6A6A"/>
         </shape>
     </item>
