--- a/app/src/main/res/layout/activity_add_donor_agree.xml
+++ b/app/src/main/res/layout/activity_add_donor_agree.xml
@@ -64,9 +64,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:text="TextView"
+        android:text="성명"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
         app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2"
@@ -77,9 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="거주지"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
         app:layout_constraintBottom_toTopOf="@+id/textView18"
         app:layout_constraintStart_toStartOf="@+id/textView16"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -89,9 +91,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="출산일"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
         app:layout_constraintBottom_toTopOf="@+id/textView19"
         app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
@@ -101,9 +104,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="E-mail"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
         app:layout_constraintBottom_toTopOf="@+id/textView20"
         app:layout_constraintStart_toStartOf="@+id/textView18"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -113,37 +117,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="연락처"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintStart_toStartOf="@+id/textView19"
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     <TextView
-        android:id="@+id/textView21"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView21"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
-
-    <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/addDonor_layout_textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -153,48 +136,74 @@
         app:layout_constraintTop_toTopOf="@+id/textView16" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/addDonor_layout_textView_adress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView17"
-        app:layout_constraintStart_toStartOf="@+id/textView23"
+        app:layout_constraintStart_toStartOf="@+id/addDonor_layout_textView_name"
         app:layout_constraintTop_toTopOf="@+id/textView17" />
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/addDonor_layout_textView_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView19"
-        app:layout_constraintStart_toStartOf="@+id/textView27"
+        app:layout_constraintStart_toStartOf="@+id/addDonor_layout_textView_deliveryDay"
         app:layout_constraintTop_toTopOf="@+id/textView19" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/addDonor_layout_textView_phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView20"
-        app:layout_constraintStart_toStartOf="@+id/textView25"
+        app:layout_constraintStart_toStartOf="@+id/addDonor_layout_textView_email"
         app:layout_constraintTop_toTopOf="@+id/textView20" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/addDonor_layout_textView_deliveryDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView18"
-        app:layout_constraintStart_toStartOf="@+id/textView24"
+        app:layout_constraintStart_toStartOf="@+id/addDonor_layout_textView_adress"
         app:layout_constraintTop_toTopOf="@+id/textView18" />
+
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/addAgree_layout_agreeInfo"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintStart_toStartOf="@+id/view2"
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/addAgree_layout_agree1"
+        android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
+        app:layout_constraintStart_toStartOf="@+id/textView21"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
 
     <TextView
         android:id="@+id/textView28"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:text="@string/addAgree_layout_agree2"
         android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
         app:layout_constraintStart_toStartOf="@+id/textView22"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -204,14 +213,26 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="@+id/checkBox2"
+        android:text="@string/addAgree_layout_agree2Info"
+        android:textSize="9sp"
+        app:layout_constraintEnd_toEndOf="@+id/agreeCheckBox2"
         app:layout_constraintStart_toStartOf="@+id/textView28"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+        app:layout_constraintTop_toBottomOf="@+id/agreeCheckBox2" />
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/addAgree_layout_agree3"
+        android:textStyle="bold"
+        android:textColor="@color/textBlackColor"
+        app:layout_constraintStart_toStartOf="@+id/textView29"
+        app:layout_constraintTop_toBottomOf="@+id/textView29" />
+
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/agreeCheckBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -220,42 +241,34 @@
         app:layout_constraintTop_toTopOf="@+id/textView22" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/agreeCheckBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/textView28"
-        app:layout_constraintStart_toStartOf="@+id/checkBox"
+        app:layout_constraintStart_toStartOf="@+id/agreeCheckBox1"
         app:layout_constraintTop_toTopOf="@+id/textView28" />
 
-    <TextView
-        android:id="@+id/textView30"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView29"
-        app:layout_constraintTop_toBottomOf="@+id/textView29" />
 
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/agreeCheckBox3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView30"
-        app:layout_constraintStart_toStartOf="@+id/checkBox2"
+        app:layout_constraintStart_toStartOf="@+id/agreeCheckBox2"
         app:layout_constraintTop_toTopOf="@+id/textView30" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/add_donor_agree_layout_nextButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
+        android:layout_marginBottom="17dp"
         android:background="@drawable/mtm_button"
         android:text="계속하기"
         android:textColor="@color/titleTextColor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintStart_toStartOf="@+id/view2"
-        tools:layout_editor_absoluteY="502dp" />
+        app:layout_constraintStart_toStartOf="@+id/view2" />
 
 
 </android.support.constraint.ConstraintLayout>
