--- a/app/src/main/res/layout/activity_add_donor_img.xml
+++ b/app/src/main/res/layout/activity_add_donor_img.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/add_donor_img_layout_editText_myInfo"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginEnd="8dp"
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/add_donor_imgLayout_final_addButton"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
