--- a/app/src/main/res/layout/activity_feeding_room_item.xml
+++ b/app/src/main/res/layout/activity_feeding_room_item.xml
@@ -48,13 +48,17 @@
         app:layout_constraintStart_toStartOf="@+id/list_donor_date"
         app:layout_constraintTop_toBottomOf="@+id/list_donor_date" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/list_donor_request_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/list_donor_name"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/btn_star" />
+
 </android.support.constraint.ConstraintLayout>
